--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ hr{
 }
 
 .link{
+    box-sizing: border-box;
     text-decoration: none;
     padding: 0.5rem 1rem;
 
@@ -76,6 +77,7 @@ hr{
 
 .hero{
     padding:2rem;
+    padding-top: 2rem;
 }
 
 .hero .hero-img{
@@ -84,6 +86,9 @@ hr{
     margin:auto;
 }
 
+.free{
+    padding-bottom: 10px;
+}
 .hero .hero-heading{
     text-align: center;
     padding-top:1rem;
