--- a/style.css
+++ b/style.css
@@ -81,9 +81,10 @@ hr{
 }
 
 .hero .hero-img{
-    max-width:350px;
+    width:350px;
     display: block;
     margin:auto;
+    max-width: 100%;
 }
 
 .free{
